--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#hero">Home</a>
+              <a class="nav-link" href="#hero">Главная</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
