--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="#hero">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about">О нас</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
