--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="users/adminpanel/admin/">Admin Login</a>
+              <a class="nav-link" href="users/adminpanel/admin/">Войти в админ</a>
             </li>
           </ul>
           <a href="users" class="btn btn-brand ms-lg-3">Student Login</a>
