--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="#about">О нас</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact">Контакты</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="users/adminpanel/admin/">Войти в админ</a>
