--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
               <a class="nav-link" href="#contact">Контакты</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="users/adminpanel/admin/">Войти в админ</a>
+              <a class="nav-link" href="users/adminpanel/admin/"
+                >Войти в админ</a
+              >
             </li>
           </ul>
-          <a href="users" class="btn btn-brand ms-lg-3">Student Login</a>
+          <a href="users" class="btn btn-brand ms-lg-3">Войти как студент</a>
         </div>
       </div>
     </nav>
@@ -151,115 +153,6 @@
                 </p>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- TEAM -->
-    <section id="team" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-12 text-center"
-            data-aos="fade-down"
-            data-aos-delay="150"
-          >
-            <div class="section-title">
-              <h1 class="display-4 fw-semibold">Team Members</h1>
-            </div>
-          </div>
-        </div>
-        <div class="row g-4 text-center">
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
-            <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="assets/images/rovic.png" alt="" />
-              </div>
-              <div class="team-member-content">
-                <h4 class="text-white">John Rovie Balingbing</h4>
-                <p class="mb-0 text-white">Web Developer</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
-            <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="assets/images/dominic.png" alt="" />
-              </div>
-              <div class="team-member-content">
-                <h4 class="text-white">Dominic Domingo</h4>
-                <p class="mb-0 text-white">Web Developer</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
-            <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="assets/images/martin.png" alt="" />
-              </div>
-              <div class="team-member-content">
-                <h4 class="text-white">Martin Martinez</h4>
-                <p class="mb-0 text-white">Web Developer</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="section-padding bg-light" id="contact">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-12 text-center"
-            data-aos="fade-down"
-            data-aos-delay="150"
-          >
-            <div class="section-title">
-              <h1 class="display-4 text-dark fw-semibold">Contact Us</h1>
-            </div>
-          </div>
-        </div>
-        <div
-          class="row justify-content-center"
-          data-aos="fade-down"
-          data-aos-delay="250"
-        >
-          <div class="col-lg-8">
-            <form
-              action="https://formspree.io/f/xvonlbyd"
-              method="POST"
-              class="row g-3 p-lg-5 p-4 theme-shadow form"
-            >
-              <h1 class="text-white" style="text-align: center">
-                Get In Touch With Us!
-              </h1>
-              <div class="form-group col-lg-12">
-                <input
-                  type="email"
-                  name="email"
-                  class="email form-control"
-                  placeholder="Enter Email address"
-                />
-              </div>
-              <div class="form-group col-lg-12">
-                <textarea
-                  name="message"
-                  rows="10"
-                  class="message form-control"
-                  placeholder="Enter Message"
-                ></textarea>
-              </div>
-              <div class="form-group col-lg-12 d-grid">
-                <center>
-                  <button class="btn btn-brand contact-btn" type="submit">
-                    Send Message
-                  </button>
-                </center>
-              </div>
-            </form>
           </div>
         </div>
       </div>
