--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="assets/images/logo.png"
-            alt="EvaluTest Logo"
+            src="/assets/images/logo.png"
+            alt="AecTestingSystem Logo"
             class="logo-img"
-          />
+          />AecTestingSystem
         </a>
         <button
           class="navbar-toggler"
@@ -74,90 +74,21 @@
               data-aos="fade-left"
               class="text-uppercase text-black display-1"
             >
-              Welcome Students!
+              Добро пожаловать студент!
             </h1>
             <h5 class="text-black mt-3 mb-4" data-aos="fade-right">
-              Get ready to put your knowledge to the test and showcase your
-              skills! Remember that this is an opportunity for you to shine and
-              demonstrate all that you have learned. Put your best foot forward
-              and aim for success!
+              Приготовьтесь проверить свои знания на практике и продемонстрировать свои
+              навыки! Помните, что это возможность для вас блеснуть и
+              продемонстрировать все, чему вы научились. Выкладывайтесь по полной
+              и нацельтесь на успех!
             </h5>
             <div>
-              <a href="register.php" class="btn btn-brand me-2">Get Started</a>
+              <a href="register.php" class="btn btn-brand me-2">Начать</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- ABOUT -->
-    <section id="about" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-12 text-center"
-            data-aos="fade-down"
-            data-aos-delay="50"
-          >
-            <div class="section-title">
-              <h1 class="display-4 fw-semibold">About us</h1>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-between align-items-center about-card">
-          <div
-            class="col-lg-6 pull-left"
-            data-aos="fade-down"
-            data-aos-delay="50"
-          >
-            <img
-              src="assets/images/about-img.png"
-              alt=""
-              class="img-responsive"
-            />
-          </div>
-          <div
-            data-aos="fade-down"
-            data-aos-delay="150"
-            class="about-content col-lg-5"
-          >
-            <h1>EvaluTest is here!</h1>
-            <p class="mt-3 mb-4">
-              Our online examination system is a cutting edge platform designed
-              to provide students with a convenient and efficient way to take
-              exams from the comfort of their own homes.
-            </p>
-            <div class="d-flex pt-4 mb-3">
-              <div class="iconbox me-4">
-                <i class="ri-mail-send-fill"></i>
-              </div>
-              <div>
-                <h5>Smooth and User Friendly!</h5>
-                <p>
-                  With a user friendly interface and advanced features such as
-                  time tracking and instant results, we strive to make the exam
-                  taking experience as smooth and stress free as possible.
-                </p>
-              </div>
-            </div>
-            <div class="d-flex mb-3">
-              <div class="iconbox me-4">
-                <i class="ri-user-5-fill"></i>
-              </div>
-              <div>
-                <h5>Security Just For You!</h5>
-                <p>
-                  Our system is designed to meet the highest standards of
-                  security and integrity, ensuring a fair and reliable
-                  assessment of your knowledge and skills.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- FOOTER -->
     <footer class="bg-dark">
       <div class="footer-top">
@@ -174,7 +105,7 @@
                   /></a>
                 </div>
                 <div class="col mb-0">
-                  <h1 class="logo-title">EvaluTest</h1>
+                  <h2 class="logo-title">ATS</h2>
                 </div>
               </div>
 
@@ -185,7 +116,7 @@
                   </div>
                 </div>
                 <div class="col">
-                  <p class="contact-info">evalutest.admin@gmail.com</p>
+                  <p class="contact-info">@mail</p>
                 </div>
               </div>
 
@@ -196,7 +127,7 @@
                   </div>
                 </div>
                 <div class="col">
-                  <p class="contact-info">+639123456789</p>
+                  <p class="contact-info">+1234567890</p>
                 </div>
               </div>
               <div class="social-icons">
@@ -207,36 +138,31 @@
               </div>
             </div>
             <div class="col-lg-2 col-sm-6">
-              <h5 class="mb-0 text-white">Support</h5>
+              <h5 class="mb-0 text-white">Поддержка</h5>
               <div class="line"></div>
               <ul>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#">Customer Service</a></li>
-                <li><a href="#">Chatbot Inquiry</a></li>
-                <li><a href="#">Submit A Ticket</a></li>
+                <li><a href="#contact">Контакты</a></li>
+                <li><a href="#contact">almec.kz</a></li>
               </ul>
             </div>
             <div class="col-lg-2 col-sm-6">
-              <h5 class="mb-0 text-white">Company</h5>
+              <h5 class="mb-0 text-white">Разработка</h5>
               <div class="line"></div>
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Affiliates</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Partnership</a></li>
+                <li><a href="#">AEChub</a></li>
               </ul>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">Newsletter</h5>
+              <h5 class="mb-0 text-white">Рассылка</h5>
               <div class="line"></div>
               <ul>
-                <li>Subscribe to our Newsletter for news and updates!</li>
+                <li>Подпишитесь на нашу рассылку, чтобы получать новости и обновления!</li>
                 <li>
                   <div class="input-wrapper">
                     <input
                       type="email"
                       class="newsletter"
-                      placeholder="Email Address"
+                      placeholder="Введите почту"
                     />
                     <button type="submit" class="btn-send">
                       <i class="ri-send-plane-fill"></i>
@@ -253,17 +179,15 @@
           <div class="row g-4 justify-content-center">
             <div class="col-auto">
               <p class="mb-0" style="text-align: center">
-                EvaluTest, Inc. © 2023 | All Rights Reserved.
+                AecTestingSystem, Inc. © 2024
               </p>
               <p class="mb-0" style="text-align: center">
                 Designed by
                 <a
-                  href="https://www.algofilipino.com/"
+                  href=""
                   target="_blank"
                   class="go-to"
-                  >Algo Filipino</a
-                >
-                | Teravision
+                  >AEChub</a>
               </p>
             </div>
           </div>
