--- a/index.html
+++ b/index.html
@@ -5,21 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная страница</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
-    />
+    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- NAVBAR -->
@@ -28,7 +19,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="/assets/images/logo.png"
-            alt="AecTestingSystem Logo"
+            alt="Logo"
             class="logo-img"
           />AecTestingSystem
         </a>
@@ -46,15 +37,6 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#hero">Главная</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">О нас</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Контакты</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="users/adminpanel/admin/"
                 >Войти в админ</a
               >
@@ -70,25 +52,17 @@
       <div class="container">
         <div class="row">
           <div class="heading-container pull-left col-8">
-            <h1
+            <h2
               data-aos="fade-left"
-              class="text-uppercase text-black display-1"
+              class="text-uppercase text-black display-3"
             >
-              Добро пожаловать студент!
-            </h1>
-            <h5 class="text-black mt-3 mb-4" data-aos="fade-right">
-              Приготовьтесь проверить свои знания на практике и продемонстрировать свои
-              навыки! Помните, что это возможность для вас блеснуть и
-              продемонстрировать все, чему вы научились. Выкладывайтесь по полной
-              и нацельтесь на успех!
-            </h5>
-            <div>
-              <a href="register.php" class="btn btn-brand me-2">Начать</a>
-            </div>
+              Добро пожаловать в систему тестирования АЭК!
+            </h2>
           </div>
         </div>
       </div>
     </section>
+    
     <!-- FOOTER -->
     <footer class="bg-dark">
       <div class="footer-top">
@@ -109,27 +83,6 @@
                 </div>
               </div>
 
-              <div class="row align-items-left">
-                <div class="col-auto">
-                  <div class="icons">
-                    <i class="ri-mail-line"></i>
-                  </div>
-                </div>
-                <div class="col">
-                  <p class="contact-info">@mail</p>
-                </div>
-              </div>
-
-              <div class="row align-items-left">
-                <div class="col-auto">
-                  <div class="icons">
-                    <i class="ri-phone-line"></i>
-                  </div>
-                </div>
-                <div class="col">
-                  <p class="contact-info">+1234567890</p>
-                </div>
-              </div>
               <div class="social-icons">
                 <a href=""><i class="ri-facebook-fill"></i></a>
                 <a href=""><i class="ri-twitter-fill"></i></a>
