--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,7 +21,7 @@
             src="./assets/images/favicon.ico"
             alt="Logo"
             class="logo-img"
-          />AecTestingSystem
+          />AecTestingSystem1
         </a>
         <button
           class="navbar-toggler"
